tests/pos/i20554-a/Annotation.java
public @interface Annotation {
    int a() default 41;
    int b() default 42;
    int c() default 43;
}
